--- a/notebooks/2_EDA_Strict_Dataset.ipynb
+++ b/notebooks/2_EDA_Strict_Dataset.ipynb
@@ -1590,6 +1590,143 @@
     "df.to_csv(strict_clean_path, index=False)\n",
     "print(f\"Saved clean strict dataset to {strict_clean_path}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f38fed5",
+   "metadata": {},
+   "source": [
+    "Final code cells to make the next notebook plug-and-play"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f0aa96",
+   "metadata": {},
+   "source": [
+    "1. Import libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ccbef335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import json\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d3f5e2",
+   "metadata": {},
+   "source": [
+    "2. Paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f46b0a01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROCESSED_DIR = Path(\"../data/processed\")\n",
+    "PROCESSED_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "STRICT_OUT_CSV   = PROCESSED_DIR / \"netflix_strict_clean.csv\"\n",
+    "STRICT_MANIFEST  = PROCESSED_DIR / \"netflix_strict_clean.manifest.json\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7216afba",
+   "metadata": {},
+   "source": [
+    "3. Save the cleaned frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7c5065a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.copy()\n",
+    "df_clean.to_csv(STRICT_OUT_CSV, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d2f711",
+   "metadata": {},
+   "source": [
+    "4. Create manifest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7877316c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manifest = {\n",
+    "    \"source\": \"strict merge (title+year) + light enrichment\",\n",
+    "    \"filename\": STRICT_OUT_CSV.name,\n",
+    "    \"n_rows\": int(df_clean.shape[0]),\n",
+    "    \"n_cols\": int(df_clean.shape[1]),\n",
+    "    \"created_utc\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "    \"schema_preview\": {\n",
+    "        \"numerics\": sorted([c for c in df_clean.columns if str(df_clean[c].dtype).startswith((\"int\",\"float\"))]),\n",
+    "        \"booleans\": sorted([c for c in df_clean.columns if str(df_clean[c].dtype) == \"bool\"]),\n",
+    "        \"objects\":  sorted([c for c in df_clean.columns if str(df_clean[c].dtype) == \"object\"]),\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfdbe12f",
+   "metadata": {},
+   "source": [
+    "5. Then i save it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "39f010b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(STRICT_MANIFEST, \"w\") as f:\n",
+    "    json.dump(manifest, f, indent=2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c9c644e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved:\n",
+      "- ../data/processed/netflix_strict_clean.csv\n",
+      "- ../data/processed/netflix_strict_clean.manifest.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Saved:\\n- {STRICT_OUT_CSV}\\n- {STRICT_MANIFEST}\")"
+   ]
   }
  ],
  "metadata": {
